--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,9 +20,12 @@
 spring:
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     show-sql: true
     database-platform: org.hibernate.dialect.MySQLDialect
+    properties:
+      hibernate:
+        default_batch_fetch_size: 100
   datasource:
     url: "jdbc:mysql://localhost:3306/jpashop?serverTimezone=Asia/Seoul"
     username: root
