--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
     database-platform: org.hibernate.dialect.MySQLDialect
   datasource:
